maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: Unit does not take parameters
    droite()()
            ^